🐛 fix overflow styles

--- a/client/src/components/ChatWindowBody/ChatWindowBody.scss
+++ b/client/src/components/ChatWindowBody/ChatWindowBody.scss
@@ -4,7 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: scroll;
 
   /* width */
   &::-webkit-scrollbar {
